Add map on page

--- a/client/app/templates/index.jade
+++ b/client/app/templates/index.jade
@@ -23,12 +23,12 @@ html
                                         a(href='#') Features
                                     li
                                         a(href='#') Contact
-                    .inner.cover
-                        h1.cover-heading Cover your page.
-
+                    div(id='map-canvas')
                     .mastfoot
                         .inner
                             p arround me
-        script(src='assets/scripts/init.js')
+
         script(src='vendor/jquery/dist/jquery.min.js')
         script(src='vendor/bootstrap/dist/js/bootstrap.min.js')
+        script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDasQqDYAQVPfnB4VDTk490mf-Mz2hi-RY')
+        script(src='assets/scripts/init.js')
