--- a/client/app/templates/index.jade
+++ b/client/app/templates/index.jade
@@ -7,26 +7,51 @@ html
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='vendor/bootstrap/dist/css/bootstrap.css')
-        link(rel='stylesheet', href='assets/stylesheets/cover.css')
+        link(rel='stylesheet', href='assets/stylesheets/sticky-footer-navbar.css')
+        link(rel='stylesheet', href='assets/stylesheets/map.css')
     body
-        .site-wrapper
-            .site-wrapper-inner
-                .cover-container
-                    .masthead.clearfix
-                        .inner
-                            h3.masthead-brand Cover
-                            nav
-                                ul.nav.masthead-nav
-                                    li.active
-                                        a(href='#') Home
-                                    li
-                                        a(href='#') Features
-                                    li
-                                        a(href='#') Contact
-                    div(id='map-canvas')
-                    .mastfoot
-                        .inner
-                            p arround me
+        nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+            .container
+                .navbar-header
+                    button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='#') Project name
+                #navbar.collapse.navbar-collapse
+                    ul.nav.navbar-nav
+                        li.active
+                            a(href='#') Home
+                        li
+                            a(href='#about') About
+                        li
+                            a(href='#contact') Contact
+                        li.dropdown
+                            a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+                                | Dropdown
+                                span.caret
+                            ul.dropdown-menu(role='menu')
+                                li
+                                    a(href='#') Action
+                                li
+                                    a(href='#') Another action
+                                li
+                                    a(href='#') Something else here
+                                li.divider
+                                li.dropdown-header Nav header
+                                li
+                                    a(href='#') Separated link
+                                li
+                                    a(href='#') One more separated link
+
+        .container
+            .page-header
+                h1 Sticky footer with fixed navbar
+            div(id='map-canvas')
+        footer.footer
+            .container
+                p.text-muted Place sticky footer content here.
 
         script(src='vendor/jquery/dist/jquery.min.js')
         script(src='vendor/bootstrap/dist/js/bootstrap.min.js')
