--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -56,4 +56,6 @@ html
 
         script(src='vendor/jquery/dist/jquery.min.js')
         script(src='vendor/bootstrap/dist/js/bootstrap.min.js')
+        script(src='vendor/angular/angular.js')
+        script(src='vendor/angular-google-maps/dist/angular-google-maps.js')
         script(src='assets/scripts/init.js')
