--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -55,6 +55,7 @@ html
                 p.text-muted Place sticky footer content here.
 
         script(src='vendor/jquery/dist/jquery.min.js')
+        script(src='vendor/lodash/dist/lodash.js')
         script(src='vendor/bootstrap/dist/js/bootstrap.min.js')
         script(src='vendor/angular/angular.js')
         script(src='vendor/angular-google-maps/dist/angular-google-maps.js')
