--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -57,9 +57,9 @@ html
             .container
                 p.text-muted Place sticky footer content here.
         <!-- build:js ../../assets/scripts/combined.js-->
-        script(src='../../vendor/jquery/dist/jquery.min.js')
+        script(src='../../vendor/jquery/dist/jquery.js')
         script(src='../../vendor/lodash/dist/lodash.js')
-        script(src='../../vendor/bootstrap/dist/js/bootstrap.min.js')
+        script(src='../../vendor/bootstrap/dist/js/bootstrap.js')
         script(src='../../vendor/angular/angular.js')
         script(src='../../vendor/angular-google-maps/dist/angular-google-maps.js')
         script(src='../../assets/scripts/init.js')
