--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -7,42 +7,19 @@ html
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         <!-- build:css ../../assets/stylesheets/combined.css-->
-        link(rel='stylesheet', href='../../vendor/bootstrap/dist/css/bootstrap.css')
-        link(rel='stylesheet', href='../../assets/stylesheets/sticky-footer-navbar.css')
+        link(rel='stylesheet',href='../../vendor/materialize/dist/css/materialize.css')
         link(rel='stylesheet', href='../../assets/stylesheets/map.css')
         div
         <!-- endbuild -->
     body
-        nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
-            .container
-                .navbar-header
-                    button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-                        span.sr-only Toggle navigation
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                    a.navbar-brand(href='#') Project name
-                #navbar.collapse.navbar-collapse
-                    ul.nav.navbar-nav
-                        li.active
-                            a(href='#') Home
-                        li
-                            a(href='#about') About
-                        li
-                            a(href='#contact') Contact
 
-        .container(ng-app='mainMap')
-            div(ng-controller='mapController')
-                ui-gmap-google-map(center='map.center', zoom='map.zoom')
-        footer.footer
-            .container
-                p.text-muted Place sticky footer content here.
-        <!-- build:js ../../assets/scripts/combined.js-->
-        script(src='../../vendor/jquery/dist/jquery.js')
-        script(src='../../vendor/lodash/dist/lodash.js')
-        script(src='../../vendor/bootstrap/dist/js/bootstrap.js')
-        script(src='../../vendor/angular/angular.js')
-        script(src='../../vendor/angular-google-maps/dist/angular-google-maps.js')
-        script(src='../../assets/scripts/init.js')
-        div
-        <!-- endbuild -->
+        div(ng-app='mainMap', ng-controller='mapController')
+            ui-gmap-google-map(center='map.center', zoom='map.zoom')
+    <!-- build:js ../../assets/scripts/combined.js-->
+    script(src='../../vendor/jquery/dist/jquery.js')
+    script(src='../../vendor/lodash/dist/lodash.js')
+    script(src='../../vendor/angular/angular.js')
+    script(src='../../vendor/angular-google-maps/dist/angular-google-maps.js')
+    script(src='../../assets/scripts/init.js')
+    div
+    <!-- endbuild -->
