--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -12,11 +12,13 @@ html
         div
         <!-- endbuild -->
     body
+        include ./partials/navbar.jade
 
-        div(ng-app='mainMap', ng-controller='mapController')
+        section(ng-app='mainMap', ng-controller='mapController')
             ui-gmap-google-map(center='map.center', zoom='map.zoom')
     <!-- build:js ../../assets/scripts/combined.js-->
     script(src='../../vendor/jquery/dist/jquery.js')
+    script(src='../../vendor/materialize/dist/js/materialize.js')
     script(src='../../vendor/lodash/dist/lodash.js')
     script(src='../../vendor/angular/angular.js')
     script(src='../../vendor/angular-google-maps/dist/angular-google-maps.js')
