--- a/client/src/assets/templates/partials/navbar.jade
+++ b/client/src/assets/templates/partials/navbar.jade
@@ -1,13 +1,13 @@
 nav.light-blue.lighten-1
     .container
         .nav-wrapper
-            a.brand-logo(id="logo-container", href='#') Logo
+            a.brand-logo(id="logo-container", href='#') Arround me
             ul.right.side-nav(id='nav-mobile')
                 li.waves-effect.waves-light
-                    a(href='#') Link
+                    a(href='#') Map
                 li.waves-effect.waves-light
-                    a(href='#') Link
+                    a(href='#') Upload
                 li.waves-effect.waves-light
-                    a(href='#') Link
+                    a(href='#') Account
             a.button-collapse(data-activates='nav-mobile', href='#')
                 i.mdi-navigation-menu
