content and footer sections

--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -9,13 +9,56 @@ html
         <!-- build:css ../../assets/stylesheets/combined.css-->
         link(rel='stylesheet',href='../../vendor/materialize/dist/css/materialize.css')
         link(rel='stylesheet', href='../../assets/stylesheets/map.css')
+        link(rel='stylesheet', href='../../assets/stylesheets/sticky-footer-navbar.css')
         div
         <!-- endbuild -->
     body
         include ./partials/navbar.jade
 
-        section(ng-app='mainMap', ng-controller='mapController')
+        .section.no-pad-bot.col.s12(id='index-banner', ng-app='mainMap', ng-controller='mapController')
             ui-gmap-google-map(center='map.center', zoom='map.zoom')
+
+        .section
+            .container
+                .row
+                    .col.s12.m4
+                        .icon-block
+                            h2.center.light-blue-text
+                                i.mdi-image-flash-on
+                            h5.center Speeds up development
+
+                            p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+                    .col.s12.m4
+                        .icon-block
+                            h2.center.light-blue-text
+                                i.mdi-social-group
+                            h5.center Speeds up development
+
+                            p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+                    .col.s12.m4
+                        .icon-block
+                            h2.center.light-blue-text
+                                i.mdi-action-settings
+                            h5.center Speeds up development
+
+                            p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+
+        footer.orange
+            .container
+                .row
+                    .col.s12.m4
+                        .icon-block
+                            p.grey-text.lighten-4 We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+                    .col.s12.m4
+                        .icon-block
+                            p.grey-text.lighten-4 We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+                    .col.s12.m4
+                        .icon-block
+                            p.grey-text.lighten-4 We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+            .footer-copyright
+                .container
+                    a.orange-text.lighten-3(href='#') Arround-me
+
     <!-- build:js ../../assets/scripts/combined.js-->
     script(src='../../vendor/jquery/dist/jquery.js')
     script(src='../../vendor/materialize/dist/js/materialize.js')
