--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -3,7 +3,7 @@ html
     head
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
-        title Index
+        title Arround me
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         <!-- build:css ../../assets/stylesheets/combined.css-->
@@ -16,7 +16,7 @@ html
 
         section
             .row
-                .col.l12.s11(id='index-banner', ng-app='mainMap', ng-controller='mapController')
+                .col.s12(id='index-banner', ng-app='mainMap', ng-controller='mapController')
                     ui-gmap-google-map(center='map.center', zoom='map.zoom')
 
         section
