--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -25,23 +25,20 @@ html
                     .col.s12.m4
                         .icon-block
                             h2.center.light-blue-text
-                                i.mdi-image-flash-on
-                            h5.center Speeds up development
-
+                                i.mdi-social-public
+                            h5.center Explore
                             p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
                     .col.s12.m4
                         .icon-block
                             h2.center.light-blue-text
-                                i.mdi-social-group
-                            h5.center Speeds up development
-
+                                i.mdi-content-add-circle-outline
+                            h5.center Create
                             p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
                     .col.s12.m4
                         .icon-block
                             h2.center.light-blue-text
-                                i.mdi-action-settings
-                            h5.center Speeds up development
-
+                                i.mdi-social-mood
+                            h5.center Communicate
                             p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
 
     <!-- build:js ../../assets/scripts/combined.js-->
