pretty mobile nav

--- a/client/src/assets/templates/partials/navbar.jade
+++ b/client/src/assets/templates/partials/navbar.jade
@@ -10,13 +10,17 @@ nav.light-blue.lighten-1
                 li.waves-effect.waves-light.hide-on-med-and-down
                     a(href='#') Account
                 li.waves-effect.waves-light.hide-on-large-only
-                    a.btn-flat(href='#')
-                        i.mdi-maps-place
+                    a(href='#')
+                        i.mdi-maps-place.left
+                        | Map
                 li.waves-effect.waves-light.hide-on-large-only
-                    a.btn-flat(href='#')
-                        i.mdi-file-file-upload
+                    a(href='#')
+                        i.mdi-file-file-upload.left
+                        | Upload
                 li.waves-effect.waves-light.hide-on-large-only
-                    a.btn-flat(href='#')
-                        i.mdi-social-person
+                    a(href='#')
+                        i.mdi-social-person.left
+                        | Account
+
             a.button-collapse(data-activates='nav-mobile', href='#')
                 i.mdi-navigation-menu
