--- a/client/src/assets/templates/partials/navbar.jade
+++ b/client/src/assets/templates/partials/navbar.jade
@@ -8,7 +8,7 @@ nav.light-blue.lighten-1
                 li.waves-effect.waves-light.hide-on-med-and-down
                     a(href='#') Upload
                 li.waves-effect.waves-light.hide-on-med-and-down
-                    a(href='#') Account
+                    a(href='/account') Account
                 li.waves-effect.waves-light.hide-on-large-only
                     a(href='#')
                         i.mdi-maps-place.left
