--- a/client/src/assets/templates/index.jade
+++ b/client/src/assets/templates/index.jade
@@ -7,7 +7,7 @@ html
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet',href='../../vendor/materialize/dist/css/materialize.css')
-        link(rel='stylesheet', href='../../assets/stylesheets/map.css')
+        link(rel='stylesheet', href='../../assets/stylesheets/site.css')
     body
         include ./partials/navbar.jade
 
