--- a/client/src/assets/templates/partials/account/layout.jade
+++ b/client/src/assets/templates/partials/account/layout.jade
@@ -3,14 +3,43 @@ html
     head
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
-        title Arround me
+        title Account
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet',href='../../vendor/materialize/dist/css/materialize.css')
-        link(rel='stylesheet', href='../../assets/stylesheets/map.css')
+        link(rel='stylesheet', href='../../assets/stylesheets/site.css')
     body
         nav.light-blue.lighten-1
             .container
                 .nav-wrapper
-                    a.brand-logo(id="logo-container", href='#') Account
-        script(src='../../../assets/scripts/app.js')
+                    a.brand-logo(id="logo-container", href='/') Account
+        section.section.no-pad-bot(id='index-banner')
+            .row
+                .col.m2.s12
+                    .card
+                        .card-image
+                            img.responsive-img(src='../../assets/images/profileExamle.jpg')
+                        .card-content
+                            ul.collection.with-header
+                                li.collection-header
+                                    h4 Egor
+                                li.collection-item
+                                    | Likes
+                                    span.badge
+                                        | 43
+                                        i.mdi-action-favorite
+                                li.collection-item
+                                    | Photos
+                                    span.badge
+                                        | 176
+                                        i.mdi-image-collections
+
+
+
+
+
+
+                .col.m10.s12(id='index-banner', ng-app='mainMap', ng-controller='mapController')
+                            .card
+                                ui-gmap-google-map(center='map.center', zoom='map.zoom')
+        script(src='../../assets/scripts/app.js')
