--- a/client/src/assets/templates/partials/navbar.jade
+++ b/client/src/assets/templates/partials/navbar.jade
@@ -1,4 +1,4 @@
-nav.light-blue.lighten-1
+nav.light-green.lighten-1
     .container
         .nav-wrapper
             a.brand-logo(id="logo-container", href='#') Arround me
