waves effect fro profile buttons

--- a/client/src/assets/stylesheets/site.styl
+++ b/client/src/assets/stylesheets/site.styl
@@ -1,2 +1,5 @@
 .angular-google-map, .angular-google-map-container
   height 60vh
+
+.waves-effect.waves-light-green-lighten-1 .waves-ripple
+  background-color: #9ccc65
