--- a/client/src/assets/templates/partials/account/layout.jade
+++ b/client/src/assets/templates/partials/account/layout.jade
@@ -21,17 +21,17 @@ html
                             img.responsive-img(src='../../assets/images/profileExamle.jpg')
                         .card-content
                             ul.collection
-                                a.collection-item
+                                a.collection-item.waves-effect.waves-light-green-lighten-1
                                     | Egor
                                     span.badge
                                         | share
                                         i.mdi-social-share.right
-                                a.collection-item
+                                a.collection-item.waves-effect.waves-light-green-lighten-1
                                     | Likes
                                     span.badge
                                         | 43
                                         i.mdi-action-favorite.right
-                                a.collection-item
+                                a.collection-item.waves-effect.waves-light-green-lighten-1
                                     | Photos
                                     span.badge
                                         | 176
