rename account layout to profile page, add signin empty page

--- a/client/src/assets/templates/partials/account/profile.jade
+++ b/client/src/assets/templates/partials/account/profile.jade
@@ -3,7 +3,7 @@ html
     head
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
-        title Account
+        title Egor
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='../../assets/stylesheets/site.css')
@@ -11,7 +11,7 @@ html
         nav.light-green.lighten-1
             .container
                 .nav-wrapper
-                    a.brand-logo(id="logo-container", href='/') Account
+                    a.brand-logo(id="logo-container", href='/') Egor
         section.section.no-pad-bot(id='index-banner')
             .row
                 .col.l2.m4.s12
