--- a/client/src/assets/stylesheets/color-pallete.styl
+++ b/client/src/assets/stylesheets/color-pallete.styl
@@ -8,6 +8,8 @@
   color: #FFFFFF
 .accent-color
   background: #8BC34A
+.accent-text-color
+  color: #8BC34A
 .primary-text-color
   color: #212121
 .secondary-text-color
