--- a/client/src/assets/templates/partials/account/profile.jade
+++ b/client/src/assets/templates/partials/account/profile.jade
@@ -8,7 +8,7 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='../../assets/stylesheets/site.css')
     body
-        nav.light-green.lighten-1
+        nav.default-primary-color
             .container
                 .nav-wrapper
                     a.brand-logo(id="logo-container", href='/') Egor
