--- a/client/src/assets/stylesheets/site.styl
+++ b/client/src/assets/stylesheets/site.styl
@@ -1,4 +1,5 @@
 @import '../../vendor/materialize/dist/css/materialize.css'
+@import './color-pallete.styl'
 
 .angular-google-map, .angular-google-map-container
   height 60vh
