fix(auth): set components.auth as a dep of the main module

--- a/client/src/assets/templates/partials/account/signin.jade
+++ b/client/src/assets/templates/partials/account/signin.jade
@@ -16,7 +16,7 @@ html
             .container
                 .row
                     .col.m6.s12
-                        .card
+                        .card(ng-app='mainMap')
                             .card-content(ng-controller='LoginController as vm')
                                 header
                                     h2.header Sign in
