--- a/client/src/assets/templates/partials/account/signin.jade
+++ b/client/src/assets/templates/partials/account/signin.jade
@@ -6,6 +6,7 @@ html
         title Sign in
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
+        link(rel='stylesheet', href='../../vendor/materialize/dist/css/materialize.min.css')
         link(rel='stylesheet', href='../../assets/stylesheets/site.css')
     body
         nav.default-primary-color
@@ -33,4 +34,4 @@ html
                                         | Sign in
                                         i.mdi-content-send.right
                                     a.btn-flat.waves-effect.waves-teal(href='/account/signup') Sign up
-        script(src='../../assets/scripts/app.js')
+        script(src='../../assets/scripts/main.js')
