--- a/client/src/assets/templates/partials/account/signin.jade
+++ b/client/src/assets/templates/partials/account/signin.jade
@@ -30,7 +30,7 @@ html
                                     input.validate(id='password', type='password', ng-model='password')
                                     label(for='password') Password
                                 .input-field
-                                    button.btn.waves-effect.waves-light(ng-click='vm.login(username, password)')
+                                    button.btn.waves-effect.waves-light.default-primary-color(ng-click='vm.login(username, password)')
                                         | Sign in
                                         i.mdi-content-send.right
                                     a.btn-flat.waves-effect.waves-teal(href='/account/signup') Sign up
