refactor(templates): set folder structure
Now templates stores in functional folders

--- a/client/src/assets/templates/main/index.jade
+++ b/client/src/assets/templates/main/index.jade
@@ -1,3 +1,31 @@
-//
-   Created by Egor on 08/02/15.
+extends ../layout
+
+block title
+    title Around me
+
+block header
+    header
+        include ../navigation/mainNav
+
+block content
+    main.container
+        .row
+            .col.s12.m4
+                .icon-block
+                    h2.center.light-blue-text
+                        i.mdi-social-public
+                    h5.center Explore
+                    p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+            .col.s12.m4
+                .icon-block
+                    h2.center.light-blue-text
+                        i.mdi-content-add-circle-outline
+                    h5.center Create
+                    p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+            .col.s12.m4
+                .icon-block
+                    h2.center.light-blue-text
+                        i.mdi-social-mood
+                    h5.center Communicate
+                    p.light We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
 
