--- a/client/src/assets/templates/layout.jade
+++ b/client/src/assets/templates/layout.jade
@@ -19,5 +19,8 @@ html
 
         block footer
 
+    script(src='/vendor/jquery/dist/jquery.js')
+    script(src='/vendor/materialize/dist/js/materialize.js')
+    script(src='/vendor/react/react.js')
     script(src='../../assets/scripts/main.js')
     block scripts
