--- a/client/src/assets/templates/account/signin.jade
+++ b/client/src/assets/templates/account/signin.jade
@@ -11,7 +11,7 @@ block content
     section.section
         .container
             .row
-                .col.m6.s12
+                .col.m6.s12#login_container
                     .card
                         .card-content
                             header
@@ -29,3 +29,6 @@ block content
                                     | Sign in
                                     i.mdi-content-send.right
                                 a.btn-flat(href='/account/signup') Sign up
+
+block scripts
+    script(src='../../assets/scripts/login.js')
